Added iziToast, done some more shit overall pretty good work nir good job

--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "./node_modules/izitoast/dist/css/iziToast.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "./node_modules/izitoast/dist/js/iziToast.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
