--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "@ng-stack/contenteditable": "^1.0.1",
     "@ngrx/store": "^7.4.0",
+    "angular-azure-blob-service": "^1.1.0",
     "angular-inline-editors": "^2.0.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
