--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.3",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
@@ -26,6 +27,7 @@
     "@ngrx/store": "^7.4.0",
     "angular-inline-editors": "^2.0.4",
     "core-js": "^2.5.4",
+    "firebase": "^5.11.1",
     "izitoast": "^1.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
