--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.7.5"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.2"
   }
 }
