--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider; ng serve",
     "build": "ng build",
     "build-prod": "ng build --prod",
     "test": "ng test",
@@ -17,17 +17,17 @@
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
-    "@angular/fire": "^5.1.3",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~9.0.2",
     "@angular/material": "^9.1.0",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
     "@ng-stack/contenteditable": "^1.0.1",
-    "@ngrx/store": "^8.6.0",
+    "@ngrx/store":"^9.2.1",
     "angular-inline-editors": "^2.0.4",
     "core-js": "^2.5.4",
-    "firebase": "^5.11.1",
+    "firebase": "8.0.0",
     "izitoast": "^1.4.0",
     "ngx-color-picker": "^9.0.0",
     "rxjs": "~6.5.4",
